@@ -36,6 +36,8 @@
 22. Support loading of custom CSS files from prefs/plugin;
     material-skin.desktop.css, material-skin.mini.css,
     material-skin.mobile.css, and material-skin.now-playing.css
+23. Set max-height for center portion of some dialogs, so that that area is
+    scrollable and 'Close', etc. buttons are always visible.
 
 1.2.2
 -----
